--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <div id="nav">
   <ul>
-    <li><a href="/">Home</a></li>
+    <li><a href="/index.html">Home</a></li>
 	<li><a href="/projects">Code</a></li>
   </ul>
 </div>
