Changed RCT header to hyperlink

--- a/projects/index.html
+++ b/projects/index.html
@@ -1,7 +1,7 @@
 <h1>Code and miscellany</h1>
 <h3>Stuff I've written that might be of use to someone</h3>
 <ul>
-  <li><h5>The Random Coffee Trials Randomiser</h5>
+  <li><h5><a href="https://github.com/fst0pped/RCTrandomiser">The Random Coffee Trials Randomiser</a></h5>
     <p>Very basic web app that will accept a list of group members and randomise them into pairs. Will also allow the user to download lists of members/pairs as CSV files so they can be reused and uploaded for future sessions.</p>
   </li>
 </ul>
