--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
-<div id="nav">
-  <ul>
-    <li><a href="/">Home</a></li>
-	<li><a href="/projects">Code</a></li>
-  </ul>
-</div>
+{% include nav.html %}
 <h1>Hi, I'm Andrew.</h1>
 <h3>I'm an IT business analyst working in the UK Public sector.</h3>
 <p>Take a look around, and find out more about what I do.</p>
