Closed html tag

--- a/index.html
+++ b/index.html
@@ -7,3 +7,4 @@
     <h3>I'm an IT business analyst working in the UK Public sector.</h3>
     <p>Take a look around, and find out more about what I do.</p>
   </body>
+</html>
