--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@ layout: page
 ---
 
     {% include nav.html %}
-    <img src="assets/images/me.jpg" />
-    <h1>Hi, I'm Andrew.</h1>
-    <h3>I'm an IT business analyst working in the UK Public sector.</h3>
-    <p>Take a look around, and find out more about what I do.</p>
+    <div id="contactCard">
+      <img id="profile" src="assets/images/me.jpg" />
+      <div class="textBlock">
+      <h1>Hi, I'm Andrew.</h1>
+      <h3>I'm an IT business analyst working in the UK Public sector.</h3>
+      <p>Take a look around, and find out more about what I do.</p>
+      </div>
+    </div>
   </body>
 </html>
