--- a/projects/index.html
+++ b/projects/index.html
@@ -3,10 +3,12 @@ layout: page
 ---
 
 {% include nav.html %}
-<h1>Code and other miscellany</h1>
-<h3>Stuff I've written that might be of use to someone</h3>
-<ul>
-  <li><h5><a href="https://github.com/fst0pped/RCTrandomiser">The Random Coffee Trials Randomiser</a></h5>
-    <p>Very basic web app that will accept a list of group members and randomise them into pairs. Will also allow the user to download lists of members/pairs as CSV files so they can be reused and uploaded for future sessions.</p>
-  </li>
-</ul>
+<div id="contactCard">
+  <h1>Code and other miscellany</h1>
+  <h3>Stuff I've written that might be of use to someone</h3>
+  <ul>
+    <li><h5><a href="https://github.com/fst0pped/RCTrandomiser">The Random Coffee Trials Randomiser</a></h5>
+      <p>Very basic web app that will accept a list of group members and randomise them into pairs. Will also allow the user to download lists of members/pairs as CSV files so they can be reused and uploaded for future sessions.</p>
+    </li>
+  </ul>
+</div>
