--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 layout: page
 ---
 
-    {% include nav.html %}
+    
     <div id="contactCard">
+	  {% include nav.html %}
       <img id="profile" src="assets/images/me.jpg" />
       <div class="textBlock">
-      <h1>Hi, I'm Andrew.</h1>
-      <h3>I'm an IT business analyst working in the UK Public sector.</h3>
+      <h1>Hi, I'm <span class="blue">Andrew</span>.</h1>
+      <h3>I'm an <span class="blue">IT business analyst</span> working in the UK Public sector.</h3>
       <p>Take a look around, and find out more about what I do.</p>
       </div>
     </div>
