--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@ layout: page
 ---
 
     
-<div id="contactCard">
-  {% include nav.html %}
+<!--<div id="contactCard">
+  {% include nav.html %}-->
   <div id="profile">
     <div><img id="me" src="assets/images/me.jpg" /></div>
     <div><a href="https://uk.linkedin.com/pub/andrew-campbell/29/867/10"><img class="logo" src="assets/images/linkedin.png" /></a></div>
@@ -13,8 +13,8 @@ layout: page
   <div class="textBlock">
     <h1>Hi, I'm <span class="blue">Andrew</span>.</h1>
     <h3>I'm an <span class="blue">IT business analyst</span> working in the UK Public sector.</h3>
-    <p>Take a look around, and find out more about what I do.</p>
+    <p>Take a look around and find out more about what I do.</p>
   </div>
   
-  {% include footer.html %}
-</div>
+<!--  {% include footer.html %}
+</div>-->
