--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 layout: page
 ---
 
-    
-<!--<div id="contactCard">
-  {% include nav.html %}-->
+   
   <div id="profile">
     <div><img id="me" src="assets/images/me.jpg" /></div>
-    <div><a href="https://uk.linkedin.com/pub/andrew-campbell/29/867/10"><img class="logo" src="assets/images/linkedin.png" /></a></div>
+    <div class="logo_container"><a href="https://uk.linkedin.com/pub/andrew-campbell/29/867/10"><img class="logo" src="assets/images/linkedin.png" /></a></div>
+    <div class="logo_container"><a href="https://github.com/fst0pped"><img class="logo" src="assets/images/github.png" /></a></div>
+    <div class="logo_container"><a href="https://plus.google.com/u/1/+AndrewCampbell84"><img class="logo" src="assets/images/google.png" /></a></div>
   </div>
 
   <div class="textBlock">
@@ -15,6 +15,3 @@ layout: page
     <h3>I'm an <span class="blue">IT business analyst</span> working in the UK Public sector.</h3>
     <p>Take a look around and find out more about what I do.</p>
   </div>
-  
-<!--  {% include footer.html %}
-</div>-->
