Added image alts/titles

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@ layout: page
    
   <div id="profile">
     <div><img id="me" src="assets/images/me.jpg" /></div>
-    <div class="logo_container"><a href="https://uk.linkedin.com/pub/andrew-campbell/29/867/10"><img class="logo" src="assets/images/linkedin.png" /></a></div>
-    <div class="logo_container"><a href="https://github.com/fst0pped"><img class="logo" src="assets/images/github.png" /></a></div>
-    <div class="logo_container"><a href="https://plus.google.com/u/1/+AndrewCampbell84"><img class="logo" src="assets/images/google.png" /></a></div>
+    <div class="logo_container"><a href="https://uk.linkedin.com/pub/andrew-campbell/29/867/10"><img class="logo" src="assets/images/linkedin.png" alt="linkedin" title="linkedin" /></a></div>
+    <div class="logo_container"><a href="https://github.com/fst0pped"><img class="logo" src="assets/images/github.png" alt="github logo" title="Github" /></a></div>
+    <div class="logo_container"><a href="https://plus.google.com/u/1/+AndrewCampbell84"><img class="logo" src="assets/images/google.png" alt="Google+ logo" title="Google+" /></a></div>
   </div>
-
+  
   <div class="textBlock">
     <h1>Hi, I'm <span class="blue">Andrew</span>.</h1>
     <h3>I'm an <span class="blue">IT business analyst</span> working in the UK Public sector.</h3>
