Tweak to homepage display. Some more work on the blogs page.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: page
     <div class="logo_container"><a href="https://plus.google.com/u/1/+AndrewCampbell84"><img class="logo" src="assets/images/google.png" alt="Google+ logo" title="Google+" /></a></div>
   </div>
   
-  <div class="textBlock">
+  <div class="right_block">
     <h1>Hi, I'm <span class="blue">Andrew</span>.</h1>
     <h3>I'm an <span class="blue">IT business analyst</span> working in the UK Public sector.</h3>
     <p>Take a look around and find out more about what I do.</p>
