--- a/projects/index.html
+++ b/projects/index.html
@@ -6,7 +6,7 @@ layout: page
   <h1>Code and other miscellany</h1>
   <h3>Stuff I've written that might be of use to someone</h3>
   <ul>
-    <li><h5><a href="https://github.com/fst0pped/RCTrandomiser">The Random Coffee Trials Randomiser</a></h5>
-      <p>Very basic web app that will accept a list of group members and randomise them into pairs. Will also allow the user to download lists of members/pairs as CSV files so they can be reused and uploaded for future sessions.</p>
+    <li><h4><a href="https://github.com/fst0pped/RCTrandomiser">The Random Coffee Trials Randomiser</a></h5>
+      <p>Very basic web app that will accept a list of group members and randomise them into pairs. Will also allow the user to download lists of members/pairs as CSV files so they can be reused and uploaded for future sessions. The code for this is open source (GPL license) <a href="https://github.com/fst0pped/RCTrandomiser">and is available on github.</a></p>
     </li>
   </ul>
