Wording for about page finalised

--- a/about/index.html
+++ b/about/index.html
@@ -3,5 +3,6 @@ layout: front_page
 title: about
 ---
 
-<h3>I'm an IT Business Analyst with a special interest in joining up data and systems across, and within, organisations</h3>
-<p></p>
+<h3>I like joining up people and systems, and think technology has a huge role to play in getting people sharing and collaborating.</h3>
+<p>I'm also interested in the potential of open source, open data and open standards to transform public services. I have a particular fondness for replacing people's fax machines and Access databases.</p>
+<p>Outside of work I dabble in Ruby, web design and photography. I am still trying to work out how you relax when computers are your hobby as well as your job.</p>
