--- a/projects/index.html
+++ b/projects/index.html
@@ -4,8 +4,8 @@ title: code
 ---
 
 
-  <h1>Code and other miscellany</h1>
-  <h3>Stuff I've written that might be of use to someone</h3>
+  <h2 class="desc">Code and other miscellany</h2>
+  <h4 class="desc">(or "Stuff I've written that might be of use to someone")</h4>
   <ul>
     <li><h4><a href="https://github.com/fst0pped/RCTrandomiser">The Random Coffee Trials Randomiser</a></h5>
       <p>Very basic web app that will accept a list of group members and randomise them into pairs. Will also allow the user to download lists of members/pairs as CSV files so they can be reused and uploaded for future sessions. The code for this is open source (GPL license) <a href="https://github.com/fst0pped/RCTrandomiser">and is available on github.</a></p>
