--- a/projects/index.html
+++ b/projects/index.html
@@ -3,12 +3,11 @@ layout: page
 title: code
 ---
 
-
-  <div class="desc">
-    <h2>Stuff I've written that might be of use to someone</h2>
-  </div>
-  <ul>
-    <li><h4><a href="https://github.com/fst0pped/RCTrandomiser">The Random Coffee Trials Randomiser</a></h5>
-      <p>Very basic web app that will accept a list of group members and randomise them into pairs. Will also allow the user to download lists of members/pairs as CSV files so they can be reused and uploaded for future sessions. The code for this is open source (GPL license) <a href="https://github.com/fst0pped/RCTrandomiser">and is available on github.</a></p>
-    </li>
-  </ul>
+<div class="left_block">
+	<h2>Stuff I've written that might be of use to others to others. I am not a developer. Treat this code accordingly.</h2>
+</div>
+<ul class="right_block">
+  <li><h4><a href="https://github.com/fst0pped/RCTrandomiser">The Random Coffee Trials Randomiser</a></h5>
+    <p>Very basic web app that will accept a list of group members and randomise them into pairs. Will also allow the user to download lists of members/pairs as CSV files so they can be reused and uploaded for future sessions. The code for this is open source (GPL license) <a href="https://github.com/fst0pped/RCTrandomiser">and is available on github.</a></p>
+  </li>
+</ul>
