Got rid of cheesy rotate, flattened design all round.

--- a/projects/index.html
+++ b/projects/index.html
@@ -3,7 +3,7 @@ layout: page
 title: code
 ---
 
-<div class="left_block">
+<div id="text_desc" class="left_block">
 	<h2>Stuff I've written that might be of use to others to others. I am not a developer. Treat this code accordingly.</h2>
 </div>
 <ul class="right_block">
