--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 ---
-layout: front_page
+layout: page
 title: home
 ---
 
-    <h1>Hello, I'm <span class="blue">Andrew</span>.</h1>
+    <h1 id="hello">Hello, I'm <span class="blue">Andrew</span>.</h1>
+    {% include profile_pic.html %}
     <h3>I'm an <span class="blue">IT business analyst</span> working in the UK Public sector.</h3>
     <p><a href="/about">Click here</a> to find out a bit more about me, or take a look around and find out more about what I do.</p>
