Non-mobile style for intro block written. Nav menu centred and aligned.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@ layout: page
 title: home
 ---
 
+    <!--<h1 id="hello">Hello,</h1>
+    <h1 id="im_andrew">I'm <span class="blue">Andrew</span>.</h1>-->
+  <div id="intro">
     <h1 id="hello">Hello, I'm <span class="blue">Andrew</span>.</h1>
     {% include profile_pic.html %}
+  </div>
     <h3>I'm an <span class="blue">IT business analyst</span> working in the UK Public sector.</h3>
     <p><a href="/about">Click here</a> to find out a bit more about me, or take a look around and find out more about what I do.</p>
