Fixed annoying issue where hovering over google logo in desktop caused text below to move up a couple of pixels. Minor content changes.

--- a/about/index.html
+++ b/about/index.html
@@ -3,8 +3,7 @@ layout: page
 title: about
 ---
 
-<img id="profile_pic" src="{{ base }}/assets/images/me.jpg" />
-<p><strong>I like joining up people and systems, and think technology has a huge role to play in getting people sharing and collaborating.</strong></p>
-<p>I'm convinced of the potential of open source, open data and open standards to transform public services, and am a big fan of the platform work being done in GDS. I'd like to see much more of local government organisations working together to solve our common problems.</p>
-<p>Much of my work focuses on Multi-Agency working and systems integration, but I'll turn my hand to anything. I also have a particular fondness for replacing people's fax machines and Access databases.</p>
+<p><strong>I like joining up people and systems, and believe technology has a huge role to play in getting people sharing and collaborating.</strong></p>
+<p>I think open source, open data and open standards have enormous potential to transform public services, and am a big fan of the platform work being done in GDS. I'd like to see much more of local government organisations working together to solve our common problems.</p>
+<p>Much of my current work focuses on Multi-Agency working and systems integration, but I have experience across lots of areas and I'll turn my hand to anything. I also have a particular fondness for replacing people's fax machines and Access databases.</p>
 <p>Outside of work I dabble in Ruby, web design and photography. I am still trying to work out how you relax when computers are your hobby as well as your job.</p>
