--- a/projects/index.html
+++ b/projects/index.html
@@ -3,7 +3,7 @@ layout: page
 title: code
 ---
 
-<p>Stuff I've written that might be of use to others to others. I am not a developer. Treat this code accordingly.</p>
+<p><strong>Stuff I've written that might be of use to others. I am not a developer. Treat this code accordingly.</strong></p>
 <ul class="code_list">
   <li><p><a href="https://github.com/fst0pped/RCTrandomiser">The Random Coffee Trials Randomiser</a></p>
     <p class="desc">Very basic web app that will accept a list of group members and randomise them into pairs. Will also allow the user to download lists of members/pairs as CSV files so they can be reused and uploaded for future sessions. The code for this is open source (GPL license) <a href="https://github.com/fst0pped/RCTrandomiser">and is available on github.</a></p>
